Docker_lesson/lesson_3_kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
      - name: otus-hw-1
        image:  masslovden/otus:latest
        ports:
        - containerPort: 8000
