Docker_lesson/lesson_3_kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  # Имя Service.
  name: otus-service
spec:
  type: ClusterIP
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
